# geni

./: .cursorrules  .gitignore  CHANGELOG  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.slim  FUNDING.YML  GEMINI.md  LICENSE  Makefile  README.md  action.yaml  default.nix  docker-compose.yaml  flake.nix  geni.nix
.agents/skills/release-drafter/: SKILL.md
.github/actions/migrate/: README.md  action.yaml  actions.sh
.github/scripts/: verify-version.sh
.github/workflows/: action.yml  docker.yaml  nix.yaml  rust.yaml  rust.yml  test-github-actions.yaml
docs/: improvements.md  testing.md
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
scripts/: github-action.sh  test-migrations.sh  update-homebrew-geni-formula.sh  verify-version.sh
src/: config.rs  database.rs  dump.rs  generate.rs  integration_test.rs  libsql_driver.rs  main.rs  management.rs  migrate.rs  status.rs
src/database_drivers/: libsql.rs  maria.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs  utils.rs
src/lib/: config.rs  dump.rs  generate.rs  integration_test.rs  lib.rs  management.rs  migrate.rs  status.rs  utils.rs
src/lib/database_drivers/: clickhouse.rs  libsql.rs  maria.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs  turso.rs  utils.rs
src/lib/test_utils/: database_test_utils.rs  migrate_test_utils.rs  mod.rs
tests/: dump.rs  integration.rs
